<resources>
  <string name="twitter_consumer_key" translatable="false">OAMOPD8qs87lILvuu2JGEHuFU</string>
  <string name="twitter_consumer_secret" translatable="false">uuliUQSaxLZygMafGCzPE3xXLfY2RZrL26wmwSkNwHgFHV3Ab4</string>
  <string name="facebook_app_id">583814478990192</string>
  <string name="fb_login_protocol_scheme">fb583814478990192</string>
  <string name="app_name">PrestoPay</string>
  <string name="create_new_account">アカウントを作成</string>
  <string name="already_has_an_account" translatable="false">既にアカウントをお持ちの方</string>
  <string name="upload_photo">写真を追加</string>
  <string name="camera_icon">カメラのアイコン</string>
  <string name="name">名前</string>
  <string name="password">Password</string>
  <string name="password_confirm">Password(確認用)</string>
  <string name="email">Email</string>
  <string name="username">ユーザーネーム</string>
  <string name="presto_pay">Presto Pay</string>
  <string name="mail_icon">メールのアイコン</string>
  <string name="check_your_email">Check your email</string>
  <string name="uses_mail_address">ユーザーのメールアドレス</string>
  <string name="description">にメールを送信しました。\nメール内のリンクをクリックして\n登録を完了してください。</string>
  <string name="navigate_to_login">ログイン画面へ</string>
  <string name="send_mail">メール送信</string>
  <string name="descriptionResetPassword">パスワードを再設定するURLを送信します。\nメールアドレスを記入してください。</string>
  <string name="login_title">Presto Pay</string>
  <string name="google_signin" />
  <string name="login_button">ログイン</string>
  <string name="google_signin_text">Log in with Google</string>
  <string name="twitter_signin_text">Twitterでサインイン</string>
  <string name="github_signin_text">Log in with Github</string>
  <string name="group_friend">グループ・友達</string>
  <string name="account">アカウント</string>
  <string name="blue_circle">青色の円</string>
  <string name="white_circle">白の円</string>
  <string name="plus_icon">プラスのアイコン</string>
  <string name="login_new_text">アカウントをお持ちでない方</string>
  <string name="login_forget_text">パスワードを忘れた方</string>
  <string name="facebook_signin_text">Log in with Facebook</string>
  <string name="lending_status">貸し借り状況</string>
  <string name="person_icon">人のアイコン</string>
  <string name="icon">アイコン</string>
  <string name="price">¥XX,XXX</string>
  <string name="lend">貸しています</string>
  <string name="profile_photo">profile photo</string>
  <string name="change_profile_photo">プロフィール写真を変更</string>
  <string name="get_friend_request">友達リクエストの受信</string>
  <string name="accept_friend_request">友達リクエストの受諾</string>
  <string name="invited_group">グループへの招待</string>
  <string name="someone_join_group">誰かのグループへの参加</string>
  <string name="payment">支払い</string>
  <string name="register_new_payment">新しい支払いの登録</string>
  <string name="edit_payment">支払いの編集</string>
  <string name="complete_payment">支払い完了済み</string>
  <string name="delete_payment">支払いの削除</string>
  <string name="group">グループ</string>
  <string name="friend">友達</string>
  <string name="register_group_name">グループ名を入力</string>
  <string name="add_member">メンバーを追加する</string>
  <string name="add_friend">友達を追加する</string>
  <string name="right_arrow">right arrow</string>
  <string name="email_address">Email address</string>
  <string name="description_reset_pass">にパスワードを変更するリンクを送信します。\n現在のパスワードを入力してください。</string>
  <string name="save_button"><u>保存</u></string>
  <string name="passwordInformation">半角英数字6~32文字</string>
  <string name="passwordConfirmInformation">同じパスワードを入力</string>
  <string name="now_loading">Now Loading …</string>
  <string name="amount">金額</string>
  <string name="ratio">割合</string>
  <string name="done">完了</string>
  <string name="show_profie">プロフィールを表示</string>
  <string name="private_information">個人情報</string>
  <string name="account_setting">アカウントの設定</string>
  <string name="app_setting">アプリの設定</string>
  <string name="notification_setting">通知の設定</string>
  <string name="change_password">パスワードの変更</string>
  <string name="information">情報</string>
  <string name="about_prestopay">Presto Payについて</string>
  <string name="help">ヘルプ</string>
  <string name="invite_prestopay">Presto Payに誘う</string>
  <string name="logout">ログアウト</string>
  <string name="group_name">Group Name</string>
  <string name="expense_name">支払い名</string>
  <string name="who_paied">支払い者</string>
  <string name="for_whom">対象者</string>
  <string name="advanced_setting">高度な支払い設定</string>
  <string name="comment">コメント</string>
  <string name="choose_group_members">新規グループのメンバーを選択</string>
  <string name="search">検索</string>
  <string name="create_group">グループを追加する</string>
  <string name="current_password">現在のパスワード</string>
  <string name="new_password">新しいパスワード</string>
  <string name="confirm_new_password">新しいパスワード(確認用)</string>
  <string name="changed">変更しました</string>
  <string name="failed_to_change_account_information">アカウント情報の修正に失敗しました</string>
  <string name="fill_all_required_forms">入力を行ってください</string>
  <string name="change_image">写真を変更</string>
  <string name="logout_confirmation">本当にログアウトしていいですか？</string>
  <string name="yes">はい</string>
  <string name="no">いいえ</string>
  <string name="fill_expense_name">支払い名を入力してください</string>
  <string name="fill_total_amount">合計金額を入力してください</string>
  <string name="fill_amount">金額を入力してください</string>
  <string name="total_amount_error">ユーザーの支払い金額の総計が合計金額と一致しません</string>
  <string name="registered_new_expense">新しい支払い情報を作成しました</string>
  <string name="failed_register_new_expense">支払い情報作成に失敗しました</string>
  <string name="add_comment">コメント追加</string>
  <string name="add">追加</string>
  <string name="cancel">キャンセル</string>
  <string name="fill_friend_username">友達のユーザー名を入力してください</string>
  <string name="user_not_found">ユーザーが見つかりません</string>
  <string name="add_friend_question">この友だち追加しますか？</string>
  <string name="group_member_restriction">グループメンバーは64人までです</string>
  <string name="group_name_restriction">1〜64文字のグループ名を入力してください</string>
  <string name="delete_friend">友達リストから削除する</string>
  <string name="delete_question">本当に削除しますか？</string>
  <string name="delete">削除する</string>
  <string name="authorization_failed">認証に失敗しました.もう一度お願いします</string>
  <string name="fill_email_password">メールアドレスとパスワードを入力してください</string>
  <string name="account_created">アカウントを作成しました</string>
  <string name="please_login">ログインしてください</string>
  <string name="failed_create_account">アカウント作成失敗しました</string>
  <string name="please_fill">入力を行ってください</string>
  <string name="fill_email">メールアドレスを入力してください</string>
  <string name="password_changed">パスワードを変更しました</string>
  <string name="current_password_wrong">現在のパスワードが正しくありません</string>
  <string name="password_doesnt_match">パスワードが一致しません</string>
  <string name="empty_form_exist">空白の欄があります</string>
  <string name="access_denied">アクセスが拒否されました</string>
  <string name="change_gallery_setting">設定からギャラリーへのアクセスを許可してください</string>
  <string name="add_friend_succeeded">友だち追加しました</string>
  <string name="create_group_succeeded">新しいグループを作成しました</string>
  <string name="create_group_failed">グループ作成に失敗しました</string>
  <string name="delete_friend_succeeded">友達リストから削除しました</string>
  <string name="delete_friend_failed">友達削除に失敗しました</string>
  <string name="delete_group_failed">グループ削除に失敗しました</string>
  <string name="group_choice_list">グループを選択</string>
  <string name="successed_to_create_account">アカウントの作成に成功しました</string>
  <string name="log_in_with_twitter">Log in with Twitter</string>
  <string name="settle_up">精算</string>
  <string name="groupName">グループ名</string>
  <string name="groupDisplayToggle">非表示</string>
  <string name="friendView">友達</string>
  <string name="paymentCompleteSetting">精算完了設定</string>
  <string name="messagePaymentCompleted">この支払いの精算を完了する</string>
  <string name="messagePaymentUncomplete">この支払いの精算を未完了にする</string>
  <string name="choose_involved_users">対象者を選択してください</string>
  <string name="amount_do_not_up_to_toal_cost">支払い合計が総額と一致しません</string>
  <string name="amount_do_not_up_to_100p">合計を100％にしてください</string>
  <string name="who_are_involved">対象者は？</string>
  <string name="payer">支払い者：</string>
  <string name="step1">Step1</string>
  <string name="step2">Step2</string>
  <string name="step3">Step3</string>
  <string name="step4">Step4</string>
  <string name="payment_name_and_amount">支払い名と総額は？</string>
  <string name="payment_name">支払い名</string>
  <string name="next">Next</string>
  <string name="who_paid">誰が支払った？</string>
  <string name="tag">tag</string>
  <string name="year">year</string>
  <string name="date">date</string>
  <string name="calendar">calendar</string>
  <string name="register_payment">支払い登録</string>
  <string name="hiddenGroups">グループ非表示一覧</string>
  <string name="delete_hidden_group">非表示グループリストから削除する</string>
  <string name="bad_internet_connection">通信状況を確認してください</string>
  <string name="skip">SKIP</string>
  <string name="personal_edit">個人情報を編集</string>
  <string name="mail">メール</string>
  <string name="group_edit">グループ情報を編集</string>
  <string name="select_member">メンバーを選択</string>
  <string name="search_user">ユーザー名を検索</string>
  <string name="グループ写真を変更" />
  <string name="change_group_profile">グループ写真を変更</string>
  <string name="精算する">to_settleup</string>
  <string name="settleup_group">精算する</string>
  <string name="amount_too_high">金額は100万未満まで有効です</string>
  <string name="pass_at_least_6">6文字以上のパスワードを設定してください</string>
  <string name="prestoPayList">貸し借りのあるグループ一覧</string>
  <string name="next_step">次へ</string>
  <string name="turn_off_air_plane_mode">機内モードをオフにしてくだい</string>
  <string-array name="currency_array">
    <item>jpy</item>
    <item>usd</item>
    <item>eur</item>
    <item>sek</item>
    <item>bgn</item>
    <item>czk</item>
    <item>dkk</item>
    <item>gbp</item>
    <item>huf</item>
    <item>pln</item>
    <item>ron</item>
    <item>chf</item>
    <item>isk</item>
    <item>nok</item>
    <item>hrk</item>
    <item>rub</item>
    <item>try</item>
    <item>aud</item>
    <item>brl</item>
    <item>cad</item>
    <item>cny</item>
    <item>hkd</item>
    <item>idr</item>
    <item>ils</item>
    <item>inr</item>
    <item>krw</item>
    <item>mxn</item>
    <item>myr</item>
    <item>nzd</item>
    <item>php</item>
    <item>sgd</item>
    <item>thb</item>
    <item>zar</item>
  </string-array>
  <string-array name="country_names">
    <item>Japanese Yen</item>
    <item>US Dollar</item>
    <item>Euro</item>
    <item>Swedish Krone</item>
    <item>Bulgarian Lev</item>
    <item>Czech Koruna</item>
    <item>Danish Krone</item>
    <item>Pound Sterling</item>
    <item>Forint</item>
    <item>Zloty</item>
    <item>Romanian Leu</item>
    <item>Swiss Franc</item>
    <item>Iceland Krona</item>
    <item>Norwegian Krone</item>
    <item>Kuna</item>
    <item>Russian Ruble</item>
    <item>Turkish Lira</item>
    <item>Australian Dollar</item>
    <item>Brazilian Real</item>
    <item>Canadian Dollar</item>
    <item>Yuan Renminbi</item>
    <item>Hong Kong Dollar</item>
    <item>Rupiah</item>
    <item>New Israeli Sheqel</item>
    <item>Indian Rupee</item>
    <item>Won</item>
    <item>Mexican Peso</item>
    <item>Malaysian Ringgit</item>
    <item>New Zealand Dollar</item>
    <item>Philippine Peso</item>
    <item>Singapore Dollar</item>
    <item>Baht</item>
    <item>Rand</item>
  </string-array>
  <string-array name="tag_name">
    <item>買い物</item>
    <item>レストラン</item>
    <item>交通費</item>
    <item>ホテル</item>
    <item>映画</item>
    <item>アミューズメント</item>
    <item>ガソリン</item>
    <item>スポーツ</item>
    <item>プレゼント</item>
    <item>雑貨</item>
    <item>家賃</item>
    <item>精算</item>
  </string-array>
  <string-array name="dividingMethod">
    <item>割り勘</item>
    <item>金額詳細入力</item>
    <item>金額割合入力</item>
  </string-array>
</resources>