<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/create_account_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:backgroundTint="@color/ourTheme"
    android:text="@string/create_new_account"
    android:textColor="@android:color/white"
    android:textSize="18sp"
    app:layout_constraintBottom_toTopOf="@+id/has_account_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/has_account_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="80dp"
    android:text="@string/already_has_an_account"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/edit_photo_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/upload_photo"
    android:textSize="12sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="94dp"
    android:layout_height="81dp"
    android:layout_marginTop="100dp"
    android:background="@drawable/back"
    android:contentDescription="@string/camera_icon"
    android:padding="0dp"
    android:visibility="visible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@android:drawable/ic_menu_camera" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@+id/create_account_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_photo_text">

    <EditText
      android:id="@+id/fullname_editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/name"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="@+id/user_name_editText"
      app:layout_constraintStart_toStartOf="@+id/user_name_editText"
      app:layout_constraintTop_toTopOf="parent"
      android:autofillHints="" />

    <EditText
      android:id="@+id/pass_editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="@+id/pass_confirm_editText"
      app:layout_constraintStart_toStartOf="@+id/pass_confirm_editText"
      app:layout_constraintTop_toBottomOf="@+id/email_editText"
      android:autofillHints="" />

    <EditText
      android:id="@+id/pass_confirm_editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:ems="10"
      android:hint="@string/password_confirm"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/pass_editText"
      android:autofillHints="" />

    <EditText
      android:id="@+id/email_editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="@+id/pass_editText"
      app:layout_constraintStart_toStartOf="@+id/pass_editText"
      app:layout_constraintTop_toBottomOf="@+id/user_name_editText"
      android:autofillHints="" />

    <EditText
      android:id="@+id/user_name_editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/username"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="@+id/email_editText"
      app:layout_constraintStart_toStartOf="@+id/email_editText"
      app:layout_constraintTop_toBottomOf="@+id/fullname_editText"
      android:autofillHints="" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
