<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/thumbnailEdit"
      android:layout_width="83dp"
      android:layout_height="85dp"
      android:layout_marginTop="64dp"

      android:contentDescription="@string/profile_photo"
      android:padding="4dp"
      android:src="@android:drawable/ic_menu_camera"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/changeProfilePicture"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/change_profile_photo"
      android:textColor="@color/ourTheme"
      android:textSize="12sp"
      app:layout_constraintEnd_toEndOf="@+id/thumbnailEdit"
      app:layout_constraintStart_toStartOf="@+id/thumbnailEdit"
      app:layout_constraintTop_toBottomOf="@+id/thumbnailEdit" />

    <EditText
      android:id="@+id/nameEditText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="48dp"
      android:layout_marginEnd="16dp"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/name"
      android:inputType="textPersonName"
      android:maxLength="31"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/changeProfilePicture" />

    <EditText
      android:id="@+id/userNameEditText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/username"
      android:inputType="textPersonName"
      android:maxLength="31"
      app:layout_constraintEnd_toEndOf="@+id/nameEditText"
      app:layout_constraintStart_toStartOf="@+id/nameEditText"
      app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
      android:id="@+id/mailEditText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:maxLength="255"
      app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
      app:layout_constraintStart_toStartOf="@+id/userNameEditText"
      app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

    <TextView
      android:id="@+id/savaButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/save_button"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
    <TextView
      android:id="@+id/nowLoading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/now_loading"
      android:textSize="18sp"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
