<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/ourTheme">

  <TextView
    android:id="@+id/presto_pay_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/presto_pay"
    android:textColor="#ffffff"
    android:textSize="36sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.25" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/parent_constraint_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="24dp"
    android:background="@android:color/background_light"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/presto_pay_text">

    <ImageView
      android:id="@+id/mail_icon"
      android:layout_width="61dp"
      android:layout_height="50dp"
      android:layout_marginTop="16dp"
      android:background="@android:color/background_dark"
      android:contentDescription="@string/mail_icon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
      android:id="@+id/check_mail_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/check_your_email"
      android:textColor="@android:color/background_dark"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/mail_icon"
      app:layout_constraintStart_toStartOf="@+id/mail_icon"
      app:layout_constraintTop_toBottomOf="@+id/mail_icon" />

    <TextView
      android:id="@+id/users_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/uses_mail_address"
      app:layout_constraintEnd_toEndOf="@+id/check_mail_text"
      app:layout_constraintStart_toStartOf="@+id/check_mail_text"
      app:layout_constraintTop_toBottomOf="@+id/check_mail_text" />

    <TextView
      android:id="@+id/description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/description"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="@+id/users_email"
      app:layout_constraintStart_toStartOf="@+id/users_email"
      app:layout_constraintTop_toBottomOf="@+id/users_email" />

    <Button
      android:id="@+id/navigate_to_login_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="16dp"
      android:background="@color/ourTheme"
      android:text="@string/navigate_to_login"
      android:textColor="@android:color/background_light"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/description" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
